--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -5,7 +5,9 @@ on: push
 jobs:
     first-job:
         runs-on: ubuntu-latest
-        steps: 
+        steps:
+            - name: checkout repo
+              uses: actions/checkout@v4
             - name: welcome massage
               run: echo "HI There "
             - name: list files
