--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -15,7 +15,9 @@ jobs:
                 ls -ltra
                 cat README.md
             - name: Generate ASCII artwork
-              run: cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
+              run: |
+                  sudo apt-get install cowsay -y
+                  cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
 
 
                   
