listing the files

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -18,6 +18,7 @@ jobs:
               run: |
                   sudo apt-get install cowsay -y
                   cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
+                  ls -ltra
 
 
                   
