added more steps

--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -15,10 +15,13 @@ jobs:
                 ls -ltra
                 cat README.md
             - name: Generate ASCII artwork
-              run: |
-                  sudo apt-get install cowsay -y
-                  cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
-                  ls -ltra
+              run: sudo apt-get install cowsay -y
+
+            - name: create dragonfile
+              run: cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
+
+            - name: list files
+              run: ls -ltra
 
 
                   
