--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -22,6 +22,9 @@ jobs:
 
             - name: list files
               run: ls -ltra
+            
+            - name: read file
+              run: cat dragon.txt
 
 
                   
