--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -10,7 +10,7 @@ jobs:
               uses: actions/checkout@v4
             
             - name: shell script
-              run: cowsay.sh
+              run: ./cowsay.sh
 
             # - name: List and Read
             #   run: |
