--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -10,7 +10,9 @@ jobs:
               uses: actions/checkout@v4
             
             - name: shell script
-              run: ./cowsay.sh
+              run: |
+                   chmod +x cowsay.sh
+                   ./cowsay.sh
 
             # - name: List and Read
             #   run: |
