--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -3,34 +3,26 @@ name : my-first-app
 on: push
 
 jobs:
-    first-job:
+    Ranjith:
         runs-on: ubuntu-latest
         steps:
             - name: checkout repo
               uses: actions/checkout@v4
             
             - name: shell script
-              run: |
-                   chmod +x cowsay.sh
-                   ./cowsay.sh
+              run: sudo apt-get install cowsay -y
+    
+    Sanju:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Run command for dragon
+              run: cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
 
-            # - name: List and Read
-            #   run: |
-            #     echo "Hi there , how are you"  
-            #     ls -ltra
-            #     cat README.md
-            # - name: Generate ASCII artwork
-            #   run: sudo apt-get install cowsay -y
-
-            # - name: create dragonfile
-            #   run: cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
-
-            - name: list files
-              run: ls -ltra
-            
-            # - name: read file
-            #   run: cat dragon.txt
-
+    Sam: 
+        runs-on: ubuntu-latest
+        steps:
+          - name: view file
+            run: cat dragon.txt
 
                   
 
