--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -13,12 +13,14 @@ jobs:
               run: sudo apt-get install cowsay -y
     
     Sanju:
+        needs: Ranjith
         runs-on: ubuntu-latest
         steps:
             - name: Run command for dragon
               run: cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
 
     Sam: 
+        needs: Sanju
         runs-on: ubuntu-latest
         steps:
           - name: view file
