--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -11,7 +11,7 @@ jobs:
             
             - name: shell script
               run: sudo apt-get install cowsay -y
-    
+        
     Sanju:
         needs: Ranjith
         runs-on: ubuntu-latest
@@ -19,10 +19,20 @@ jobs:
             - name: Run command for dragon
               run: cowsay -f dragon "run for cover, iam Dragon ...Roar" >> dragon.txt
 
+            - name: upload file
+              uses: actions/upload-artifact@v4
+              with:
+               name: Dragonfile
+               path: dragon.txt
+
     Sam: 
         needs: Sanju
         runs-on: ubuntu-latest
         steps:
+          - name: download file
+            uses: actions/download-artifact@v4
+            with:
+               name: Dragonfile
           - name: view file
             run: cat dragon.txt
 
